Added Role Based authorization for the Product Module to restrict/allow access based on roles.